--- a/posts/centos-6-install-intellij-idea.asciidoc
+++ b/posts/centos-6-install-intellij-idea.asciidoc
@@ -1,7 +1,7 @@
 CentOS 6: Install IntelliJ IDEA
 ===============================
 Lance Gatlin <lance.gatlin@gmail.com>
-v1,8-Jun-2014
+v2,28-Sep-2014
 :imagesdir: centos-6-install-intellij-idea/
 :blogpost-status: unpublished
 :blogpost-categories: centos6,intellij_idea
@@ -9,7 +9,7 @@ v1,8-Jun-2014
 == Versions
 1. CentOS 6.5 x86_64
 2. Oracle Java JDK 1.7
-3. IntelliJ IDEA Community 13.1.3
+3. IntelliJ IDEA Community 13.1.4
 
 == Prerequisties
 1. link:centos-6-install-oracle-jdk.asciidoc[CentOS 6: Install Oracle JDK]
@@ -30,18 +30,22 @@ sudo ln -sf /usr/lib/idea-IC-$BUILD /usr/lib/idea
 .Example
 [source,sh,numbered]
 ----
-wget http://download.jetbrains.com/idea/ideaIC-13.1.3.tar.gz
-tar xvf ideaIC-13.1.3.tar.gz
-sudo mv idea-IC-135.909 /usr/lib
-sudo ln -sf /usr/lib/idea-IC-135.909 /usr/lib/idea
+wget http://download.jetbrains.com/idea/ideaIC-13.1.4.tar.gz
+tar xvf ideaIC-13.1.4.tar.gz
+sudo mv idea-IC-135.1230 /usr/lib
+sudo ln -sf /usr/lib/idea-IC-135.1230 /usr/lib/idea
 ----
 
 == Configure
-Add to /usr/bin:
+1. Add to /usr/bin:
++
 [source,sh,numbered]
+----
 sudo ln -sf /usr/lib/idea/bin/idea.sh /usr/bin/idea 
-
+----
++
 Typically, I need more memory for the JVM that runs IntelliJ IDEA. Edit /usr/lib/idea/bin/idea.vmoptions and change the following lines:
++
 ----
 ...
 -Xms2048m
@@ -50,8 +54,19 @@ Typically, I need more memory for the JVM that runs IntelliJ IDEA. Edit /usr/lib
 -XX:ReservedCodeCacheSize=128m
 ...
 ----
-
++
 Repeat the same edits above for /usr/lib/idea/bin/idea64.vmoptions
++
+2. Raise the +inotify+ limit of watchable directories from 7k to a higher value, such as 512k, edit /etc/sysctl.conf
++
+----
+fs.inotify.max_user_watches = 524288
+----
++
+Apply the change without reboot:
+----
+sudo sysctl -p
+----
 
 == Verify
 Start it up:
@@ -62,3 +77,7 @@ $ idea
 image::intellij-idea-complete-installation.png[]
 
 image::intellij-idea-welcome.png[]
+
+== Sources
+
+1. http://confluence.jetbrains.com/display/IDEADEV/Inotify+Watches+Limit
